# V3_Transformer

./: .gitignore  2026-06-05-deep-audit.md  2026-06-07-train_vfe3-vs-train_vfe-comparison.md  AGENTS.md  CLAUDE.md  README.md  _cmsg.txt  ablation.py  audit-2026-06-05-new.md  check_audit_fixes.py  check_gpu_tests.py  check_junit.py  compare_vocab_figures.py  efe_ring_experiment.py  generate_efe.py  make_figures.py  multiseed_analysis.py  pyproject.toml  run_cpu_tests.py  scaling.py  scaling_analysis.py  sigma_gate_measure.py  train_vfe3.py
.verification/: ledger.json
Manuscripts-Theory/: DERIVATION_VERIFICATION.md  GL(K)_attention.tex  GL(K)_supplementary.tex  PIFB.tex  PIFB2.tex  Participatory_it_from_bit.tex  references.bib
agent_tooling/: __init__.py
benchmarks/: __init__.py  benchmark_phi_projection.py  benchmark_phi_pullback_group.py
docs/: 2026-06-01-buildout-roadmap.md  2026-06-07-buildout-roadmap-status.md  2026-06-07-observation-likelihood-term-brainstorm.md  2026-06-10-realtime-interaction-model-roadmap.md  2026-06-14-unbuilt-features-investigation.md  2026-06-21-edits.md  2026-06-22-edits.md  2026-06-27-ablation-manuscript-digest.md  2026-06-27-edits.md  2026-06-28-edits.md  2026-06-29-edits.md  2026-07-01-edits.md  2026-07-02-edits.md  2026-07-03-edits.md  2026-07-04-edits.md  2026-07-05-blocks-k48-followup-experiment-spec.md  2026-07-05-edits.md  2026-07-05-improvement-ideas.md  2026-07-05-learnable-per-head-kappa-design.md  2026-07-06-edits.md  2026-07-07-edits.md  2026-07-08-edits.md  2026-07-09-edits.md  2026-07-10-edits.md  2026-07-10-mm-exact-prior-anchor-fix.md  2026-07-11-ablation-vs-train-vfe3-timing-investigation.md  2026-07-11-edits.md  2026-07-11-omega-tilde-model-channel-follow-up.md  2026-07-11-omega-tilde-model-channel-investigation.md  2026-07-11-transport-mean-per-head-investigation.md  2026-07-11-umap-figure-improvements.md  2026-07-12-barycenter-per-coord-alpha-investigation.md  2026-07-12-edits.md  2026-07-13-edits.md  2026-07-14-edits.md  2026-07-15-edits.md  2026-07-16-edits.md  2026-07-17-edits.md  2026-07-17-global-elbo-language-model-observations-investigation.md  2026-07-18-edits.md  (+6 more)
tests/: conftest.py  hierarchy_identity_probe.py  pytest_policy.py  test_2026_07_15_cache_serialization_remediation.py  test_2026_07_15_data_integrity_remediation.py  test_2026_07_15_driver_reliability_remediation.py  test_2026_07_15_family_remediation.py  test_alpha_i.py  (+196 more)
(+444 files in other folders)
