[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vfe3"
version = "0.0.1"
description = "Gauge-theoretic VFE transformer, clean-room rebuild (V3)"
requires-python = ">=3.10"
# numpy/matplotlib are HARD deps (audit 2026-07-05 m16): vfe3/viz/figures.py imports both
# unconditionally and finalize-time figure generation is ON by default (generate_figures=True),
# so a torch-only install would complete a full training run and then crash at finalize.
dependencies = ["torch", "numpy", "matplotlib"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-xdist"]
data = ["tiktoken"]          # tokenizer for dataset cache builds (tests importorskip it)
# scikit-learn>=1.3 supplies cluster.HDBSCAN + silhouette/Calinski-Harabasz and scipy the KDE
# relief / curve_fit / t-CI used by the figure set; both were previously reached only via
# umap-learn's transitive dependencies (sklearn<1.3 silently degraded HDBSCAN to KMeans).
viz = [
    "umap-learn",
    "scikit-learn>=1.3",
    "scipy",
    "arabic-reshaper",
    "python-bidi",
]   # optional publication figures, including native Arabic text shaping

[tool.setuptools.packages.find]
include = ["vfe3", "vfe3.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-config --strict-markers"
markers = [
    "slow: heavy figure, artifact, or UMAP integration test; skipped unless --runslow",
    "umap: integration test that executes the real UMAP implementation",
    "cuda: test that requires a CUDA device",
    "external: test that requires externally supplied artifacts or bundles",
    "registry_mutation: test that temporarily changes a process-global registry",
    "xdist_group(name): resource group used to serialize shared execution resources",
]

[tool.coverage.run]
branch = true
source = ["vfe3"]
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
